--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Station</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -16,21 +16,34 @@
     <section class="flexible-part">
         <div class="header">
             <h1> <span class="text-color">Skip</span> The Junk Food, Eat Healthy With Food Station</h1>
-            <h3>We provide only healthy and fresh food. So, you don't need a diet.</h3>
-            <a  class="link-button" target="_blank"   href="">ORDER FOOD</a>
+            <p>We provide only healthy and fresh food in our shop. So, you don't need a diet.</p><br>
+            <a class="link-button" target="_blank" href="">ORDER FOOD</a>
 
         </div>
         <div class="header">
 
             <img src="images/header.png" alt="header">
         </div>
-
-
-
-
-
-
     </section>
+
+    <section class="flexible-part" id="middle">
+        <div class="header">
+
+            <img src="images/middle.png" alt="header">
+        </div>
+        <div class="header">
+            <h2> About Myself</h2>
+            <p class="parag"> I am Anika Tahsin Fariha. I am a Food Service Worker with 2+ years of experience, serving
+                and delivering
+                in a variety of places and people.Provides excellent customer service, and possesses an encyclopedic
+                knowledge of healthy food, entrees, restaurant equipment, and POS terminals. </p> <br>
+            <a class="link-button" target="_blank" href="">CONTACT ME</a>
+
+        </div>
+    </section>
+
+
+
 </body>
 
 </html>
