recipie and footer part

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="header">
             <h1> <span class="text-color">Skip</span> The Junk Food, Eat Healthy With Food Station</h1>
             <p>We provide only healthy and fresh food in our shop. So, you don't need a diet.</p><br>
-            <a class="link-button" target="_blank" href="">ORDER FOOD</a>
+            <a class="link-button" target="_blank" href="orderfood.html">ORDER FOOD</a>
 
         </div>
         <div class="header">
@@ -33,15 +33,66 @@
         </div>
         <div class="header">
             <h2> About Myself</h2>
-            <p class="parag"> I am Anika Tahsin Fariha. I am a Food Service Worker with 2+ years of experience, serving
+            <p class="paragraph"> I am Anika Tahsin Fariha. I am a Food Service Worker with 2+ years of experience,
+                serving
                 and delivering
                 in a variety of places and people.Provides excellent customer service, and possesses an encyclopedic
                 knowledge of healthy food, entrees, restaurant equipment, and POS terminals. </p> <br>
-            <a class="link-button" target="_blank" href="">CONTACT ME</a>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/anika-tahsin-fariha-5520a819b/">CONTACT ME</a>
 
         </div>
     </section>
+    <section class="last-part">
+        <div class="recipe-tittle">
+            <h3> Popular Recipies </h3>
+            <p class="middle-para">Healthy Recipies are those that provide you with the nutrients you need to sustain
+                your body's well-being and
+                retain energy. Water, carbohydrates, fat, protein, vitamins, and minerals are the key nutrients that
+                make up
+                a healthy, balanced diet.</p>
+        </div> <br> <br>
 
+        <div class="flexible-part">
+
+            <div class="recipie">
+                <img src="images/1.jpg" alt="recipie">
+                <h3>Black Pepper Tofu and Asparagus</h3>
+                <p class="paragraph">This salad puts all the best textures on a spoon: crisp, raw broccoli; chewy,
+                    sticky dates; and
+                    crunchy toasted pistachios. </p>
+
+
+            </div>
+            <div class="recipie">
+                <img src="images/2.png" alt="recipie">
+                <h3 >Broccoli Spoon Salad With Vinaigrette</h3>
+                <p class="paragraph"> This salad puts all the best textures on a spoon: crisp, raw broccoli; chewy, sticky dates; and
+                    crunchy toasted pistachios. </p>
+
+            </div>
+            <div class="recipie">
+                <img src="images/3.jpg" alt="recipie">
+                <h3 >Vegetarian Carbonara With Vinaigrette</h3>
+                <p class="paragraph">This salad puts all the best textures on a spoon: crisp, raw broccoli; chewy, sticky dates; and
+                    crunchy toasted pistachios. </p>
+
+
+            </div>
+
+        </div>
+
+
+
+    </section>
+    
+  
+
+
+   <footer>
+       <h2 class="footer-text"><span class="text-color">FOOD </span>STATION</h2>
+       <P class="footer-text-another">Thank you for ,visiting this site.</P>
+       
+   </footer>
 
 
 </body>
