--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                 and delivering
                 in a variety of places and people.Provides excellent customer service, and possesses an encyclopedic
                 knowledge of healthy food, entrees, restaurant equipment, and POS terminals. </p> <br>
-            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/anika-tahsin-fariha-5520a819b/">CONTACT ME</a>
+            <a class="link-button" target="_blank"
+                href="https://www.linkedin.com/in/anika-tahsin-fariha-5520a819b/">CONTACT ME</a>
 
         </div>
     </section>
@@ -65,15 +66,17 @@
             </div>
             <div class="recipie">
                 <img src="images/2.png" alt="recipie">
-                <h3 >Broccoli Spoon Salad With Vinaigrette</h3>
-                <p class="paragraph"> This salad puts all the best textures on a spoon: crisp, raw broccoli; chewy, sticky dates; and
+                <h3>Broccoli Spoon Salad With Vinaigrette</h3>
+                <p class="paragraph"> This salad puts all the best textures on a spoon: crisp, raw broccoli; chewy,
+                    sticky dates; and
                     crunchy toasted pistachios. </p>
 
             </div>
             <div class="recipie">
                 <img src="images/3.jpg" alt="recipie">
-                <h3 >Vegetarian Carbonara With Vinaigrette</h3>
-                <p class="paragraph">This salad puts all the best textures on a spoon: crisp, raw broccoli; chewy, sticky dates; and
+                <h3>Vegetarian Carbonara With Vinaigrette</h3>
+                <p class="paragraph">This salad puts all the best textures on a spoon: crisp, raw broccoli; chewy,
+                    sticky dates; and
                     crunchy toasted pistachios. </p>
 
 
@@ -84,15 +87,56 @@
 
 
     </section>
+
+    <section class="flexible-part">
+
+        <div class="extra-part">
+
+            <h4>Our Reviews</h4>
+            <section class="flexible-part">
+
+                <div class="recipie">
+                    <h3>Mrs.Reema</h3>
+                    <img src="images/rev1 .jpg" alt="Reema">
+                    <p>Provide useful, constructive feedback.
+                        Talk about a range of elements, including customer service.
+                        Be detailed, specific, and honest</p>
+                </div>
+                <div class="recipie">
+                    <h3>Mrs.Selina</h3>
+                    <img src="images/rev2.jpg " alt="Selina">
+                    <p>Provide useful, constructive feedback.
+                        Talk about a range of elements, including customer service.
+                        Be detailed, specific, and honest</p>
+                </div>
+                <div class="recipie">
+                    <h3>Mrs.Karina</h3>
+                    <img src="images/rev3.jpg" alt="Karina">
+                    <p>Provide useful, constructive feedback.
+                        Talk about a range of elements, including customer service.
+                        Be detailed, specific, and honest</p>
+                </div>
+
+            </section>
+        </div>
+        <div class="extra-part">
+
+            <h4>Our Location</h4>
+            <p><iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d460470.44400018814!2d88.95042461899152!3d25.62400506446803!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39fccdcecf5fefc9%3A0x68bf330fbc933bd3!2sRangpur%20District!5e0!3m2!1sen!2sbd!4v1625542399303!5m2!1sen!2sbd"
+                    width="600" height="550" style="border:0;" allowfullscreen="" loading="lazy"></iframe></p>
+
+        </div>
+
+
+
+    </section>
     
-  
+    <footer>
+        <h2 class="footer-text"><span class="text-color">FOOD </span>STATION</h2>
+        <P class="footer-text-another">Thank you for ,visiting this site.</P>
 
-
-   <footer>
-       <h2 class="footer-text"><span class="text-color">FOOD </span>STATION</h2>
-       <P class="footer-text-another">Thank you for ,visiting this site.</P>
-       
-   </footer>
+    </footer>
 
 
 </body>
